--- a/index.html
+++ b/index.html
@@ -144,39 +144,46 @@
                 </div>
             </div>
             <div class="team-photo scroll-reveal-right">
-                <div style="text-align: center; z-index: 2; position: relative;">
-                    <strong>Nos 2 associés</strong><br>
-                    <small style="opacity: 0.8;">Experts en marketing digital</small>
+                <div class="team-photo-container">
+                    <img src="images/qui.png" alt="Nos 2 associés" class="team-image">
                 </div>
             </div>
+
         </div>
     </section>
 
-    <!-- Features -->
-    <section class="features">
-        <div class="features-container">
-            <h2 class="section-title2 scroll-reveal">Propulsez votre succès grâce à ce test intelligent</h2>
-            <p class="section-subtitle scroll-reveal">De vrais segments de test avec de nouvelles idées, des vrais spots et du contenu qui va développer votre audience sur les réseaux publicitaires</p>
-            
-            <div class="features-grid">
-                <div class="feature-card scroll-reveal">
-                    <div class="feature-icon">📊</div>
-                    <h3>Notes et stats</h3>
-                    <p>Vous serez 100% tranquille sur notre communication personnalisée avec des analyses de résultats qui s'ajustent au fur et à mesure. On communique tout ce qui compte pour nos clients et ça multiplie leur CA avec de nouveaux secteurs clés.</p>
+<!-- Features -->
+<section class="features">
+    <div class="features-container">
+        <h2 class="section-title2 scroll-reveal">Propulsez votre succès grâce à ce test intelligent</h2>
+        <p class="section-subtitle scroll-reveal">De vrais segments de test avec de nouvelles idées, des vrais spots et du contenu qui va développer votre audience sur les réseaux publicitaires</p>
+        
+        <div class="features-grid">
+            <div class="feature-card scroll-reveal">
+                <div class="feature-icon">
+                    <img src="images/note.png" alt="Notes et stats" class="feature-image">
                 </div>
-                <div class="feature-card scroll-reveal">
-                    <div class="feature-icon">📈</div>
-                    <h3>Marketing et vente</h3>
-                    <p>Vous serez pas seuls avec des clicks et des résultats mais aussi toutes les idées que nous générons pour nos clients. On commence ensemble des stratégies pour éviter les écueils et rendre le parcours plus facile et propice à l'achat.</p>
+                <h3>Notes et stats</h3>
+                <p>Vous serez 100% tranquille sur notre communication personnalisée avec des analyses de résultats qui s'ajustent au fur et à mesure. On communique tout ce qui compte pour nos clients et ça multiplie leur CA avec de nouveaux secteurs clés.</p>
+            </div>
+            <div class="feature-card scroll-reveal">
+                <div class="feature-icon">
+                    <img src="images/marketing.png" alt="Marketing et vente" class="feature-image">
                 </div>
-                <div class="feature-card scroll-reveal">
-                    <div class="feature-icon">🎯</div>
-                    <h3>Expérience client</h3>
-                    <p>Notre équipe de 7 personnes accompagne vos clients, spécialement en fonction de vos besoins et objectifs ! Alors vous avez accès à leurs souhaits et leur parcours d'achat pour une approche personnalisée qui permet de gagner.</p>
+                <h3>Marketing et vente</h3>
+                <p>Vous serez pas seuls avec des clicks et des résultats mais aussi toutes les idées que nous générons pour nos clients. On commence ensemble des stratégies pour éviter les écueils et rendre le parcours plus facile et propice à l'achat.</p>
+            </div>
+            <div class="feature-card scroll-reveal">
+                <div class="feature-icon">
+                    <img src="images/expercience.png" alt="Expérience client" class="feature-image">
                 </div>
+                <h3>Expérience client</h3>
+                <p>Notre équipe de 7 personnes accompagne vos clients, spécialement en fonction de vos besoins et objectifs ! Alors vous avez accès à leurs souhaits et leur parcours d'achat pour une approche personnalisée qui permet de gagner.</p>
             </div>
         </div>
-    </section>
+    </div>
+</section>
+
 
     <!-- CTA Section -->
     <section class="cta" id="contact">
