--- a/index.html
+++ b/index.html
@@ -4,17 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="static/style.css">
-    <title>Kingdom Ads - Test Publicitaire Intelligent</title>
+    <title>Marketwins - Expert en vidéos publicitaire</title>
 </head>
 <body>
     <!-- Header -->
     <header class="header">
         <nav class="nav">
-<div class="logo">
-    <a href="#top">
-        <img src="images/logo.png" alt="Kingdom Ads" width="60" height="60">
-    </a>
-</div>
+        <div class="logo">
+            <a href="#top">
+                <img src="images/logo.png" alt="Kingdom Ads" width="60" height="60">
+            </a>
+        </div>
 
             <div class="trust-badge">
                 ✓ Plus de 40 000 clients satisfaits
@@ -55,10 +55,10 @@
     <div class="logos-container">
         <p class="logos-text">Ces marques nous font confiance :</p>
         <div class="logos-grid">
-            <div class="logo-item"><img src="images/conecting.png" alt="Logo Jaz" width="200" height="100"></div>
-            <div class="logo-item"><img src="images/gayolle.png" alt="Logo Gayolle" width="200" height="100"></div>
-            <div class="logo-item"><img src="images/guillaume.jpg" alt="Logo Guillaume Dupond" width="200" height="100"></div>
-            <div class="logo-item"><img src="images/camper.png" alt="Logo Camises" width="200" height="100"></div>
+            <div class="logo-item"><img src="images/conecting.png" alt="Logo Jaz" width="210" height="100"></div>
+            <div class="logo-item"><img src="images/gayolle.png" alt="Logo Gayolle" width="210" height="100"></div>
+            <div class="logo-item"><img src="images/guillaume.jpg" alt="Logo Guillaume Dupond" width="210" height="100"></div>
+            <div class="logo-item"><img src="images/camper.png" alt="Logo Camises" width="210" height="100"></div>
             <div class="logo-item">Et plus de 200 autres clients...</div>
         </div>
     </div>
