--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
 <section class="features">
     <div class="features-container">
         <h2 class="section-title2 scroll-reveal">Propulsez votre succès grâce à ce test intelligent</h2>
-        <p class="section-subtitle scroll-reveal">On sortira gagnant de ce test avec de nouvelles idées, des vrais stats et surtout on va trouver votre audience sur les réseaux publicitaires</p>
+        <p class="section-subtitle2 scroll-reveal">On sortira gagnant de ce test avec de nouvelles idées, des vrais stats et surtout on va trouver votre audience sur les réseaux publicitaires</p>
         
         <div class="features-grid">
             <div class="feature-card scroll-reveal">
